fix footer on mobile

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -105,14 +105,21 @@
     text-align: left;
     padding-bottom: 10px;
   }
+  .link_container li{
+    text-align: right;
+    padding-right: 10px;
+    width: 100%;
+  }
   .footer_container {
     margin: auto;
     width: 100%;
   }
   .container {
     align-items: left;
-    justify-content: left;
+    justify-content: space-between;
     width: 100%;
+    display: flex;
+    flex-direction: row;
   }
 
   .army{
