--- a/styles/NavBar.module.css
+++ b/styles/NavBar.module.css
@@ -37,6 +37,8 @@
 
 .mobile_menu li {
     padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     text-align: right;
     font-size: 1.4rem;
     color:white;
